--- a/index.html
+++ b/index.html
@@ -170,11 +170,10 @@
                     </div>
                 </div>
                 <div class="why-image">
-                    <!-- Placeholder for an office or abstract image -->
-                    <div class="image-placeholder">
-                        <i class="fas fa-building"></i>
-                        <span>Globo Despachante Londrina</span>
-                    </div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1828.431055811771!2d-51.152537!3d-23.3118021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb43623aa6f457%3A0x1da9e67f0c0be992!2sDespachante%20Globo!5e0!3m2!1spt-BR!2sbr!4v1715463100000!5m2!1spt-BR!2sbr"
+                        width="100%" height="400" style="border:0; border-radius: 20px;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
