--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                             <li><a href="https://maiaraphael.github.io/declaracao/">Declação de Residência</a></li>
                             <li><a href="https://maiaraphael.github.io/procuracao/">Procuração Simples</a></li>
                             <li><a href="https://maiaraphael.github.io/atpv/">Termo de Preenchimento ATPV</a></li>
+                            <li><a href="https://maiaraphael.github.io/cancelamento_comunicado/">Declaração de
+                                    Cancelamento de Comunicado
+                                </a></li>
+                            <li><a
+                                    href="https://www1.detran.pr.gov.br/detran-itd/consultas/veiculos/consulta_restricao.asp">Consultar
+                                    Gravame</a></li>
+                            <li><a href="https://selo.funarpen.com.br/Consulta/">Consultar Selo Funarpen</a></li>
                         </ul>
                     </li>
 
@@ -113,18 +120,18 @@
                     <p>Comprou carro zero? Cuidamos de todo o processo de documentação e emplacamento.</p>
                 </div>
                 <div class="service-card">
-                    <div class="icon-box"><i class="fas fa-calendar-check"></i></div>
+                    <div class="icon-box"><i class="fas fa-search"></i></div>
                     <h3>Consultas
                         <p>Consulta completa de veículo que voce pensa em adiquirir.
                         </p>
                 </div>
                 <div class="service-card">
-                    <div class="icon-box"><i class="fas fa-file-invoice-dollar"></i></div>
+                    <div class="icon-box"><i class="fas fa-file-signature"></i></div>
                     <h3>Emissão de ATPV</h3>
                     <p>Vai vender o seu veículo? Emitimos o ATPV para você vender tranquilamente.</p>
                 </div>
                 <div class="service-card">
-                    <div class="icon-box"><i class="fas fa-exchange-alt"></i></div>
+                    <div class="icon-box"><i class="fas fa-user-edit"></i></div>
                     <h3>Alteração de Dados e Características</h3>
                     <p>Precisando mudar algum dados do seu veículo? Fale com a gente.</p>
                 </div>
@@ -197,7 +204,7 @@
                 <p>Seu parceiro de confiança para regularização veicular em Londrina e região.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/globodespachante/"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
