--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         <a href="#">Termos e Documentos <i class="fas fa-chevron-down"
                                 style="font-size: 0.8em; margin-left: 5px;"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="https://maiaraphael.github.io/declaracao/">Declação de Residência</a></li>
-                            <li><a href="https://maiaraphael.github.io/procuracao/">Procuração Simples</a></li>
-                            <li><a href="https://maiaraphael.github.io/atpv/">Termo de Preenchimento ATPV</a></li>
-                            <li><a href="https://maiaraphael.github.io/cancelamento_comunicado/">Declaração de
+                            <li><a href="declaracao_residencia/index.html">Declação de Residência</a></li>
+                            <li><a href="procuracao_simples/index.html">Procuração Simples</a></li>
+                            <li><a href="requerimento_atpv/index.html">Termo de Preenchimento ATPV</a></li>
+                            <li><a href="cancelamento_atpv/index.html">Declaração de
                                     Cancelamento de Comunicado
                                 </a></li>
                             <li><a
@@ -147,6 +147,7 @@
     <!-- Why Choose Us -->
     <section id="about" class="why-us">
         <div class="container">
+            <!-- ... existing content ... -->
             <div class="why-us-content">
                 <div class="why-text">
                     <h2>Por que escolher o Globo Despachante?</h2>
@@ -181,6 +182,69 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1828.431055811771!2d-51.152537!3d-23.3118021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb43623aa6f457%3A0x1da9e67f0c0be992!2sDespachante%20Globo!5e0!3m2!1spt-BR!2sbr!4v1715463100000!5m2!1spt-BR!2sbr"
                         width="100%" height="400" style="border:0; border-radius: 20px;" allowfullscreen=""
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Budget Calculator Section -->
+    <section class="calculator-section" id="orcamento">
+        <div class="container">
+            <div class="section-header">
+                <h2>Simule seu Orçamento</h2>
+                <p>Faça uma estimativa instantânea dos valores para regularizar seu veículo.</p>
+            </div>
+            <div class="calculator-wrapper">
+                <div class="calc-grid">
+                    <div class="calc-group">
+                        <label>Tipo de Transferência</label>
+                        <select id="transferType" class="calc-select">
+                            <option value="pr">Transferência Veículo do Paraná</option>
+                            <option value="other">Transferência Outro Estado</option>
+                        </select>
+                    </div>
+
+                    <div class="calc-group">
+                        <label>Alienação</label>
+                        <select id="alienationType" class="calc-select">
+                            <option value="none">Sem nenhum gravame</option>
+                            <option value="include">Com inclusão de gravame</option>
+                            <option value="exclude">Com exclusão de gravame</option>
+                            <option value="both">Com inclusão e exclusão</option>
+                        </select>
+                    </div>
+
+                    <div class="calc-group">
+                        <label>Forma de Pagamento</label>
+                        <select id="paymentMethod" class="calc-select">
+                            <option value="cash">À Vista (Pix, Dinheiro, Débito)</option>
+                            <option value="credit">Cartão de Crédito</option>
+                        </select>
+                    </div>
+
+                    <div class="calc-group" id="installmentsGroup" style="display: none;">
+                        <label>Parcelamento</label>
+                        <select id="installments" class="calc-select">
+                            <option value="1">Crédito à Vista</option>
+                            <option value="2">2x</option>
+                            <option value="3">3x</option>
+                            <option value="4">4x</option>
+                            <option value="5">5x</option>
+                            <option value="6">6x</option>
+                            <option value="7">7x</option>
+                            <option value="8">8x</option>
+                            <option value="9">9x</option>
+                            <option value="10">10x</option>
+                            <option value="11">11x</option>
+                            <option value="12">12x</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="calc-result-box">
+                    <h3>Valor Total Estimado</h3>
+                    <div class="calc-total" id="totalValue">R$ 530,00</div>
+                    <p class="calc-note" id="paymentNote">Pagamento à vista.</p>
                 </div>
             </div>
         </div>
