--- a/cancelamento_comunicado.html
+++ b/cancelamento_comunicado.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="auth-loading">
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -87,7 +87,7 @@
                 <label>PORTADOR DO RG:</label>
                 <input type="text" style="flex: 1;">
                 <label>E DO CPF:</label>
-                <input type="text" style="flex: 1;" class="mask-cpf">
+                <input type="text" style="flex: 1;" class="mask-cpf-cnpj">
                 <span>,</span>
             </div>
 
@@ -122,7 +122,7 @@
                 <label>PORTADOR DO RG.:</label>
                 <input type="text" style="flex: 1;">
                 <label>E DO CPF:</label>
-                <input type="text" style="flex: 1;" class="mask-cpf">
+                <input type="text" style="flex: 1;" class="mask-cpf-cnpj">
                 <span>.</span>
             </div>
 
@@ -207,6 +207,14 @@
         </div>
     </footer>
 
+    <!-- Firebase Compat -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+    <!-- App Scripts -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
 
