--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                     <li><a href="#contact">Contato</a></li>
                     <li><a href="orcamento.html">Orçamento</a></li>
                     <li><a href="fipe.html">Tabela Fipe</a></li>
-                    <li class="btn btn-outline dropdown">
+
+                    <!-- Protected Menu (Hidden by default) -->
+                    <li id="protectedMenu" class="btn btn-outline dropdown hidden">
                         <a href="#">Termos e Documentos <i class="fas fa-chevron-down"
                                 style="font-size: 0.8em; margin-left: 5px;"></i></a>
                         <ul class="dropdown-menu">
@@ -66,6 +68,12 @@
                         </ul>
                     </li>
 
+                    <!-- Login/Logout Buttons -->
+                    <li><a href="#" id="loginBtn" class="nav-btn-link"><i class="fas fa-sign-in-alt"></i> Entrar</a>
+                    </li>
+                    <li><a href="#" id="logoutBtn" class="nav-btn-link hidden"><i class="fas fa-sign-out-alt"></i>
+                            Sair</a></li>
+
                 </ul>
             </nav>
             <button class="mobile-menu-btn" aria-label="Menu">
@@ -83,6 +91,7 @@
                 <ul class="hero-benefits">
                     <li><i class="fas fa-check"></i> Consulta Gratuita e Online</li>
                     <li><i class="fas fa-check"></i> Parcelamento de transferências</li>
+                    <li><i class="fas fa-check"></i> Primeiro Emplacamento</li>
                     <li><i class="fas fa-check"></i> Atendimento em Londrina e Região</li>
                 </ul>
             </div>
@@ -247,6 +256,41 @@
         </div>
     </footer>
 
+    <!-- Auth Modal -->
+    <div id="authModal" class="modal-overlay">
+        <div class="modal-container">
+            <div class="modal-header">
+                <h2 id="modalTitle">Login</h2>
+                <button id="closeModalBtn" class="close-modal">&times;</button>
+            </div>
+            <form id="authForm" class="auth-form">
+                <div id="authError" class="auth-error"></div>
+                <div class="input-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" required placeholder="seu@email.com">
+                </div>
+                <div class="input-group">
+                    <label for="password">Senha</label>
+                    <input type="password" id="password" required placeholder="******" minlength="6">
+                </div>
+                <button type="submit" id="authSubmitBtn" class="btn btn-primary btn-full">Entrar</button>
+                <div class="auth-footer">
+                    <p><a href="#" id="toggleAuthMode">Não tem conta? <b>Cadastre-se</b></a></p>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+    <!-- App Scripts (No type='module') -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/app.js?v=5"></script>
 </body>
 
