--- a/procuracao_simples.html
+++ b/procuracao_simples.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style_procuracao.css">
 </head>
 
-<body>
+<body class="auth-loading">
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -67,6 +67,16 @@
     </header>
 
     <div class="page">
+        <!-- Control Section (Hidden in Print) -->
+        <div id="outorgados-control" class="outorgados-control">
+            <span>Número de Outorgados:</span>
+            <div class="radio-group">
+                <label><input type="radio" name="num_outorgados" value="1" checked> 1</label>
+                <label><input type="radio" name="num_outorgados" value="2"> 2</label>
+                <label><input type="radio" name="num_outorgados" value="3"> 3</label>
+            </div>
+        </div>
+
         <h1>Procuração Simples</h1>
 
         <div class="section">
@@ -78,7 +88,7 @@
                 </div>
                 <div class="field" style="flex: 1;">
                     <label>CPF/CNPJ</label>
-                    <input type="text" placeholder="" class="mask-cpf">
+                    <input type="text" placeholder="" class="mask-cpf-cnpj">
                 </div>
             </div>
             <div class="form-row">
@@ -89,22 +99,27 @@
             </div>
         </div>
 
-        <div class="section">
-            <h2>Outorgado</h2>
-            <div class="form-row">
-                <div class="field" style="flex: 3;">
-                    <label>Nome</label>
-                    <input type="text" placeholder="">
-                </div>
-                <div class="field" style="flex: 1;">
-                    <label>CPF/CNPJ</label>
-                    <input type="text" placeholder="" class="mask-cpf">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="field">
-                    <label>Endereço</label>
-                    <input type="text" placeholder="">
+        <div id="outorgados-container" class="section">
+            <h2 id="outorgados-title">Outorgado</h2>
+            <div id="outorgados-fields">
+                <!-- Dynamic Fields will be inserted here -->
+                <div class="outorgado-block">
+                    <div class="form-row">
+                        <div class="field" style="flex: 3;">
+                            <label>Nome</label>
+                            <input type="text" placeholder="">
+                        </div>
+                        <div class="field" style="flex: 1;">
+                            <label>CPF/CNPJ</label>
+                            <input type="text" placeholder="" class="mask-cpf-cnpj">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="field">
+                            <label>Endereço</label>
+                            <input type="text" placeholder="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -205,6 +220,14 @@
         </div>
     </footer>
 
+    <!-- Firebase Compat -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+    <!-- App Scripts -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
 
