--- a/requerimento_atpv.html
+++ b/requerimento_atpv.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="auth-loading">
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -117,7 +117,7 @@
                     </div>
                     <div class="field-box full-width">
                         <label>CPF:</label>
-                        <input type="text" name="vendedor_cpf" class="mask-cpf">
+                        <input type="text" name="vendedor_cpf" class="mask-cpf-cnpj">
                     </div>
                     <div class="field-box full-width">
                         <label>E-Mail:</label>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="field-box full-width">
                         <label>CPF:</label>
-                        <input type="text" name="comprador_cpf" class="mask-cpf">
+                        <input type="text" name="comprador_cpf" class="mask-cpf-cnpj">
                     </div>
                     <div class="field-box full-width">
                         <label>Endereço:</label>
@@ -203,6 +203,14 @@
         </div>
     </footer>
 
+    <!-- Firebase Compat -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+    <!-- App Scripts -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
 
