--- a/segunda_via_crv.html
+++ b/segunda_via_crv.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="auth-loading">
 
     <!-- Top Bar -->
     <div class="top-bar">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="input-group grow-1">
                     <label>CPF</label>
-                    <input type="text" class="line-input mask-cpf" />
+                    <input type="text" class="line-input mask-cpf-cnpj" />
                 </div>
             </div>
         </div>
@@ -195,6 +195,14 @@
         </div>
     </footer>
 
+    <!-- Firebase Compat -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+    <!-- App Scripts -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
 
