--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Globo Despachante - Londrina PR | Consulta de Débitos e Licenciamento</title>
+    <title>Despachante em Londrina - Globo Despachante | Licenciamento e Transferência</title>
     <meta name="description"
-        content="Regularize seu veículo com o Globo Despachante em Londrina. Consulta de IPVA 2025, Licenciamento, Multas e Transferência. Rápido e Seguro.">
+        content="Procurando Despachante em Londrina? O Globo Despachante resolve Licenciamento, IPVA 2025, Transferência e Primeiro Emplacamento. Atendimento rápido e fácil.">
+    <meta name="keywords"
+        content="despachante londrina, despachante em londrina, licenciamento, ipva 2025, transferencia de veiculo, primeiro emplacamento, detran pr, despachante centro londrina">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,12 +16,50 @@
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Globo Despachante - Londrina PR">
+    <meta property="og:title" content="Globo Despachante - O Melhor de Londrina">
     <meta property="og:description"
-        content="Regularize seu veículo com o Globo Despachante em Londrina. Consulta de IPVA 2025, Licenciamento, Multas e Transferência. Rápido e Seguro.">
+        content="Regularize seu veículo com segurança. Licenciamento, IPVA e Transferências. Fale conosco pelo WhatsApp!">
     <meta property="og:image" content="https://www.globodespachante.com.br/logo.png">
     <meta property="og:url" content="https://www.globodespachante.com.br">
     <meta property="og:type" content="website">
+
+    <!-- JSON-LD Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AutoBodyShop",
+      "name": "Globo Despachante",
+      "image": "https://www.globodespachante.com.br/logo.png",
+      "url": "https://www.globodespachante.com.br",
+      "telephone": "+554333560220",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Rua Uruguai, 197 - Centro",
+        "addressLocality": "Londrina",
+        "addressRegion": "PR",
+        "postalCode": "86010-210",
+        "addressCountry": "BR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -23.3118021,
+        "longitude": -51.152537
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "08:00",
+        "closes": "18:00"
+      },
+      "priceRange": "$$"
+    }
+    </script>
 </head>
 
 <body>
@@ -47,6 +87,7 @@
                     <li><a href="#contact">Contato</a></li>
                     <li><a href="orcamento.html">Orçamento</a></li>
                     <li><a href="fipe.html">Tabela Fipe</a></li>
+                    <li><a href="orgaos.html">Orgãos</a></li>
 
                     <!-- Protected Menu (Hidden by default) -->
                     <li id="protectedMenu" class="btn btn-outline dropdown hidden">
@@ -86,8 +127,8 @@
     <section class="hero">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1>Regularize seu veículo sem sair de casa</h1>
-                <p>Licenciamento, IPVA 2025, Multas e Transferências.</p>
+                <h1>Globo Despachante em Londrina</h1>
+                <p>Regularize seu veículo sem sair de casa. Licenciamento, IPVA 2025, Multas e Transferências.</p>
                 <ul class="hero-benefits">
                     <li><i class="fas fa-check"></i> Consulta Gratuita e Online</li>
                     <li><i class="fas fa-check"></i> Parcelamento de transferências</li>
