--- a/segunda_via_crv.html
+++ b/segunda_via_crv.html
@@ -84,7 +84,7 @@
         <div class="section request-reason">
             <div class="input-group full-width">
                 <label>A SOLICITAÇÃO É POR:</label>
-                <input type="text" class="line-input" />
+                <input type="text" placeholder="EXTRAVIO" class="line-input" />
             </div>
             <div class="reason-subtitle">(EXTRAVIO – FURTO – RASURA OU DILACERAÇÃO).</div>
         </div>
@@ -206,5 +206,6 @@
     <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 
 </html>
