--- a/cancelamento_comunicado.html
+++ b/cancelamento_comunicado.html
@@ -131,7 +131,7 @@
 
             <div class="line column-layout">
                 <label>O MOTIVO DO CANCELAMENTO DA COMUNICAÇÃO DE VENDA</label>
-                <input type="text" class="full-width" style="margin-top: 5px;">
+                <input type="text" placeholder="DESISTÊNCIA" class="full-width" style="margin-top: 5px;">
             </div>
 
             <div class="spacer-large"></div>
@@ -218,5 +218,6 @@
     <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 
 </html>
