--- a/cancelamento_comunicado.html
+++ b/cancelamento_comunicado.html
@@ -48,6 +48,7 @@
                             <li><a href="declaracao_residencia.html">Declação de Residência</a></li>
                             <li><a href="procuracao_simples.html">Procuração Simples</a></li>
                             <li><a href="requerimento_atpv.html">Termo de Preenchimento ATPV</a></li>
+                            <li><a href="requerimento_atpv_sp.html">Requerimento ATPV SP</a></li>
                             <li><a href="cancelamento_comunicado.html">Declaração de
                                     Cancelamento de Comunicado
                                 </a></li>
@@ -131,7 +132,7 @@
 
             <div class="line column-layout">
                 <label>O MOTIVO DO CANCELAMENTO DA COMUNICAÇÃO DE VENDA</label>
-                <input type="text" placeholder="DESISTÊNCIA" class="full-width" style="margin-top: 5px;">
+                <input type="text" placeholder="DESISTENCIA" class="full-width" style="margin-top: 5px;">
             </div>
 
             <div class="spacer-large"></div>
@@ -218,6 +219,5 @@
     <script src="js/auth.js"></script>
     <script src="js/app.js"></script>
 </body>
-
 
 </html>
