--- a/requerimento_atpv_sp.html
+++ b/requerimento_atpv_sp.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procuração - Modelo Profissional</title>
+    <title>Requerimento ATPV SP - Globo Despachante</title>
+    <link rel="stylesheet" href="css/style_requerimento_atpv_sp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style_procuracao.css">
 </head>
 
 <body class="auth-loading">
@@ -48,18 +49,14 @@
                             <li><a href="procuracao_simples.html">Procuração Simples</a></li>
                             <li><a href="requerimento_atpv.html">Termo de Preenchimento ATPV</a></li>
                             <li><a href="requerimento_atpv_sp.html">Requerimento ATPV SP</a></li>
-                            <li><a href="cancelamento_comunicado.html">Declaração de
-                                    Cancelamento de Comunicado
-                                </a></li>
-                            <li><a href="segunda_via_crv.html">Declaração para Solicitação de 2ª Via do CRV</a>
-                            </li>
+                            <li><a href="cancelamento_comunicado.html">Declaração de Cancelamento de Comunicado</a></li>
+                            <li><a href="segunda_via_crv.html">Declaração para Solicitação de 2ª Via do CRV</a></li>
                             <li><a
                                     href="https://www1.detran.pr.gov.br/detran-itd/consultas/veiculos/consulta_restricao.asp">Consultar
                                     Gravame</a></li>
                             <li><a href="https://selo.funarpen.com.br/Consulta/">Consultar Selo Funarpen</a></li>
                         </ul>
                     </li>
-
                 </ul>
             </nav>
             <button class="mobile-menu-btn" aria-label="Menu">
@@ -68,120 +65,119 @@
         </div>
     </header>
 
-    <div class="page">
-        <!-- Control Section (Hidden in Print) -->
-        <div id="outorgados-control" class="outorgados-control">
-            <span>Número de Outorgados:</span>
-            <div class="radio-group">
-                <label><input type="radio" name="num_outorgados" value="1" checked> 1</label>
-                <label><input type="radio" name="num_outorgados" value="2"> 2</label>
-                <label><input type="radio" name="num_outorgados" value="3"> 3</label>
+    <div class="page-container">
+        <!-- Form Header -->
+        <div class="form-header">
+            <div class="logo-placeholder">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Bras%C3%A3o_do_estado_de_S%C3%A3o_Paulo.svg/1200px-Bras%C3%A3o_do_estado_de_S%C3%A3o_Paulo.svg.png"
+                    alt="Brasão SP">
+            </div>
+            <div class="header-logo-text">
+                <h2>GOVERNO DO ESTADO DE SÃO PAULO</h2>
+                <h3>SECRETARIA DE PLANEJAMENTO E GESTÃO</h3>
+                <h3>DEPARTAMENTO ESTADUAL DE TRÂNSITO – DETRAN-SP</h3>
+            </div>
+            <div class="logo-placeholder">
+                <h2 style="font-weight: 800; font-family: sans-serif; color: #004a80;">detran.sp</h2>
             </div>
         </div>
 
-        <h1>Procuração Simples</h1>
-
-        <div class="section">
-            <h2>Outorgante</h2>
-            <div class="form-row">
-                <div class="field" style="flex: 3;">
-                    <label>Nome</label>
-                    <input type="text" placeholder="">
+        <!-- Form Content -->
+        <div class="form-section">
+            <div class="input-row">
+                <div class="input-group w-full">
+                    <label>NOME COMPRADOR:</label>
+                    <input type="text" class="line-input">
                 </div>
-                <div class="field" style="flex: 1;">
-                    <label>CPF/CNPJ</label>
-                    <input type="text" placeholder="" class="mask-cpf-cnpj">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="field">
-                    <label>Endereço</label>
-                    <input type="text" placeholder="">
-                </div>
-            </div>
-        </div>
-
-        <div id="outorgados-container" class="section">
-            <h2 id="outorgados-title">Outorgado</h2>
-            <div id="outorgados-fields">
-                <!-- Dynamic Fields will be inserted here -->
-                <div class="outorgado-block">
-                    <div class="form-row">
-                        <div class="field" style="flex: 3;">
-                            <label>Nome</label>
-                            <input type="text" placeholder="">
-                        </div>
-                        <div class="field" style="flex: 1;">
-                            <label>CPF/CNPJ</label>
-                            <input type="text" placeholder="" class="mask-cpf-cnpj">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="field">
-                            <label>Endereço</label>
-                            <input type="text" placeholder="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>Poderes</h2>
-            <div class="powers-block">
-                Especiais e irrevogáveis para representa-lo(a) junto a INSTITUIÇÕES FINANCEIRAS, RECEITAS FEDERAL E
-                ESTADUAIS(IPVA) e DETRAN, podendo solicitar e retirar a 2ª via do CRV, CRLV, efetuar transferência
-                em meu nome, solicitar o primeiro emplacamento, retirar o veículo do pátio, efetuar parcelamentos,
-                alteração de dados, alteração de característica, recadastramento, solicitar a baixa do mesmo,
-                reativação, assinar o recibo de transferência, podendo passar para o seu próprio nome ou a terceiros,
-                assinar termos e declarações, baixa definitiva do veículo, assinar declaração de residência,
-                <select class="inline-select">
-                    <option value="PODENDO SUBSTABELECER">PODENDO SUBSTABELECER</option>
-                    <option value="NÃO PODENDO SUBSTABELECER">NÃO PODENDO SUBSTABELECER</option>
-                </select> e com prazo
-                <input type="text" class="inline-input" value="" placeholder="Prazo">.
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>Dados do Veículo</h2>
-            <div class="vehicle-grid">
-                <div class="field">
-                    <label>Marca/Modelo</label>
-                    <input type="text">
-                </div>
-                <div class="field">
-                    <label>Placa</label>
-                    <input type="text">
-                </div>
-                <div class="field">
-                    <label>Renavam</label>
-                    <input type="text">
-                </div>
-                <div class="field">
-                    <label>Chassi</label>
-                    <input type="text">
-                </div>
-                <div class="field">
-                    <label>Ano</label>
-                    <input type="text">
-                </div>
-                <div class="field">
-                    <label>Cor</label>
-                    <input type="text">
-                </div>
-            </div>
-        </div>
-
-        <div class="footer">
-            <div class="date-line" style="width: 100%;">
-                Data: ______ / ______ / __________
             </div>
 
-            <div class="signature-box">
-                Assinar e Reconhecer Firma
-                <span>(Por Verdadeira)</span>
+            <div class="input-row">
+                <div class="input-group flex-1">
+                    <label>PLACA:</label>
+                    <input type="text" class="line-input">
+                </div>
+                <div class="input-group flex-2">
+                    <label>RENAVAM:</label>
+                    <input type="text" class="line-input">
+                </div>
             </div>
+
+            <div class="input-row">
+                <div class="input-group flex-1">
+                    <label>CPF:</label>
+                    <input type="text" class="line-input mask-cpf">
+                </div>
+                <div class="input-group flex-2">
+                    <label>E-MAIL:</label>
+                    <input type="email" class="line-input">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group w-full">
+                    <label>ENDEREÇO:</label>
+                    <input type="text" class="line-input">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group" style="width: 80px;">
+                    <label>NR:</label>
+                    <input type="text" class="line-input">
+                </div>
+                <div class="input-group flex-1">
+                    <label>COMPL:</label>
+                    <input type="text" class="line-input">
+                </div>
+                <div class="input-group flex-2">
+                    <label>BAIRRO:</label>
+                    <input type="text" class="line-input">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group flex-1">
+                    <label>CEP:</label>
+                    <input type="text" class="line-input mask-cep">
+                </div>
+                <div class="input-group flex-3">
+                    <label>MUNICIPIO:</label>
+                    <input type="text" class="line-input">
+                </div>
+                <div class="input-group" style="width: 60px;">
+                    <label>UF:</label>
+                    <input type="text" class="line-input" maxlength="2">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group w-full">
+                    <label>KILOMETRAGEM:</label>
+                    <input type="text" class="line-input">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group w-full">
+                    <label>VALOR DA VENDA:</label>
+                    <input type="text" class="line-input">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group w-full">
+                    <label>EMAIL VENDEDOR:</label>
+                    <input type="email" class="line-input">
+                </div>
+            </div>
+
+            <div class="input-row">
+                <div class="input-group w-full">
+                    <label style="font-weight: 800;">CPF DO VENDEDOR:</label>
+                    <input type="text" class="line-input mask-cpf">
+                </div>
+            </div>
+
         </div>
     </div>
 
